--- a/_posts/2024-01-09-coveo-blitz-2023.md
+++ b/_posts/2024-01-09-coveo-blitz-2023.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 
-title: "TBD"
+title: "Coveo Blitz, où il faut développer à la vitesse de l'éclair"
 tags: [Blitz, Coveo Blitz]
 
 author:
@@ -10,19 +10,17 @@ author:
   image: mabeaulieu-coveo.jpg
 ---
 
-En janvier dernier avait lieu la 14ᵉ édition de Coveo Blitz, notre [compétition annuelle de programmation pour étudiants](https://www.coveo.com/blog/fr/coveo-blitz-10-ans-en-un-eclair/). Ceux qui sont familiers avec la compétition reconnaîtront la formule des dernières années : un jeu de notre cru est présenté aux participants, ils disposent de 10 heures pour programmer un _bot_ qui saura y jouer et triompher dans des matches de deux ou quatre équipes participantes.
+En janvier dernier avait lieu la 14ᵉ édition de Coveo Blitz, notre [compétition annuelle de programmation pour étudiants](https://www.coveo.com/blog/fr/coveo-blitz-10-ans-en-un-eclair/). Ceux qui sont familiers avec l'évènement reconnaîtront la formule des dernières années : on y présente un jeu de notre cru, puis les participants disposent de 10 heures pour programmer un _bot_ qui saura y jouer et triompher dans des matches de 2 ou 4 équipes.
 
-Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être le dernier survivant. Force est d'admettre que cette fois-ci, les concepteurs se sont dépassés en termes de richesse et complexité : il y avait une grande variété d'actions possibles, et donc de stratégies disponibles, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer certaines des stratégies employées, mais plus important, comment en tant que joueur, on peut s'attaquer à ce genre de défi.
-
-<!-- more -->
-
-En tant que coach, nous sommes invités à jouer le rôle de "beta tester" en concevant notre propre _bot_ en solo. C'est à ce titre que cette année et dans un cadre assez différent que celui de la compétition elle-même, que j'ai moi aussi relevé le défi. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la coupe cette année, ainsi que SG1, une équipe vétérane qui participe à la phase de beta test chaque année.
+Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être le dernier survivant. Cette année, nos concepteurs ont concocté un jeu qui était à mon sens l'un des plus sophistiqués, mais aussi des plus complexes des dernières années : il y avait une grande variété d'actions possibles, et donc de stratégies à explorer, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer certaines des stratégies employées lors de la dernière édition, mais plus important, comment en tant que joueur, on peut s'attaquer à ce genre de défi.
 
 <!-- more -->
 
-## Comment bien commencer
+À noter que j'ai moi-même expérimenté le jeu dans un cadre assez différent que celui du jour de la compétition : nous les coachs servons également de "beta-tester" pour l'évènement et devons concevoir un _bot_ en solo en guise de préparation du tournoi. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la compétition, ainsi que SG1, une équipe vétérane qui participé à la phase de "beta test" chaque année.
 
-La première étape lorsque l'on joue à un jeu est sans doute de se familiariser avec les règles. Comme mentionné précédemment, le jeu cette année était particulièrement sophistiqué et complexe. Je vais ici tenter de résumer la compréhension que j'en ai eue lors de ma première lecture des règles.
+## L'inévitable lecture des règles du jeu
+
+Sans surprise, avant de pouvoir parler de stratégie pour un jeu, il faut se familiariser avec les règles. C'est sans aucun doute la première chose que l'on devrait faire lorsque l'on aborde le défi. Je vous épargne toutefois la lecture des règles officielles, je vais ici tenter d'en résumer les grandes lignes.
 
 INSERT PICTURE OF BATTLEFIELD
 
