--- a/_posts/2024-01-09-coveo-blitz-2024.md
+++ b/_posts/2024-01-09-coveo-blitz-2024.md
@@ -58,17 +58,19 @@ Lorsque j'ai interrogé Leebly pour savoir quel a été leur plan en début de j
 
 Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduit est petit, comme c'était le cas pour notre stratégie d'attaque élémentaire, c'est souvent plus facile à détecter et réparer.
 
-À Blitz, une des façons préconisée de valider nos changements est d'utiliser le mode local. Lorsque l'on fait des changements, on peut lancer des parties de notre poste et les visionner. Cela m'a souvent permis de voir des bogues que j'avais introduits. Un exemple particulièrement coûteux, est lorsque je venais d'ajouter un nouveau type d'action à prioriser : or, suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel en mouvement, prisonnier de quelque chose qui s'apparente à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Ce genre de problème, s'il n'est pas détecté et réglé peut-être fatal. 
+Un exemple particulièrement coûteux, est lorsque je venais d'implémenter la priorisation des tours d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel en mouvement, prisonnier de quelque chose qui s'apparente à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
 
-Il y a des bogues qui peuvent briser l'implémentation au point qu'ils vont réduire votre _bot_ à un bot qui ne font rien . On ne peut pas de manière réaliste, se dire que ça n'arrivera pas. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, dans le contexte de Blitz, regarder des parties en model local peut nous aider à nous valider. Il y a en fait bien plus de raisons sur pourquoi est-ce que l'on devrait regarder des parties de Blitz.
+Peu importe votre stratégie, une implémentation fautive ne la mettra probablement pas en valeur. On ne peut pas complètement éviter les bogues. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, le mode local de Blitz est très pratique justement pour expérimenter et valider nos changements rapidement, sans avoir à se commettre. Il nous permet de lancer des parties de notre poste et les visionner. Et si vous oubliez de vous valider en mode local, il y a toujours les matches contre les autres équipes.
 
-## Watching "games" TODO PLACEHOLDER
+## Je regarde le match, question de priorité !
 
-L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros météore venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre les pluies incessantes de météores. Personnellement, j'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores, s'il y en a, en étant affecté à une tourelle rotative, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper la venue des météores plus tôt.
+L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros météore venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre les pluies incessantes de météores alors que les autres si. À noter que ce n'était pas nécessairement un problème en début de journée : ça l'est devenu au fur et à mesure que les _bots_ des autres coachs sont devenus de plus en plus aguérris.  Personnellement, j'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores, s'il y en a, en étant affecté à une tourelle pivotable, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper la venue des météores plus tôt.
 
-Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les stations amovibles, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de quatre tours rotatives accessibles et que je me défends mieux contre les menaces externes, il arrive de plus en plus fréquemment qu'un de mes membres d'équipage se tourne les pouces. Il est donc temps de commencer à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car les projectiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. Je n'aurai pas le temps de raffiner la sélection du type de tours : au final ça n'aura pas été nécessaire.
+Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les tourelles pivotables, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de quatre tours pivotables accessibles et que je me défends mieux contre les menaces externes, il arrive de plus en plus fréquemment qu'un des membres de mno équipage se tourne les pouces. Il est donc temps de commencer à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car les projectiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. J'avais des vagues idées pour mieux prioriser le type de tours à utiliser, mais je n'ai jamais eu le temps de m'y pencher sérieusement.
 
-Une autre idée que je voulais implémenter est de charger au maximum avant de tirer. Or, ce n'était vraiment pas clair pour moi à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À l'inverse, lorsque j'ai parlé à l'équipe SG1, ils m'ont mentionné avoir écarté cette stratégie, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins performants contre les autres équipes. Comme quoi il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment et savoir s'adapter selon notre réalité. 
+Une autre idée que je voulais implémenter est de charger au maximum avant de tirer. Or, c'était difficile d'évaluer à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À partir de ce moment, je vais continuer d'opposer mon propre _bot_ à sa version antérieur à chaque changement que je tente d'introduire.
+
+Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tours, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment, puis de faire des choix et savoir prioriser en conséquence.
 
 ## Rince and repeat TODO PLACE HOLDER TITLE
 
