--- a/_posts/2024-01-09-coveo-blitz-2024.md
+++ b/_posts/2024-01-09-coveo-blitz-2024.md
@@ -72,7 +72,7 @@ Une autre idée que je voulais implémenter est de charger au maximum avant de t
 
 Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tours, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment, puis de faire des choix et savoir prioriser en conséquence.
 
-## Rince and repeat TODO PLACE HOLDER TITLE
+## Un Blitz d'itérations
 
 Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
 
@@ -80,13 +80,15 @@ Dans l'effervescence de la compétition, il est tentant de se plonger dans le co
 >
 > -- <cite>Nicolas Legros, Équipe Leebly</cite>
 
-Les membres de l'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où l'on envoie les membres sur la "meilleure" tourelle d'attaque pour attaquer les ennemis. Cette année, ils ont commencé par implémenter une stratégie bien plus élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation, réparé leurs bogues, expérimenter en regardant des parties contre les autres équipes. Ce n'est que plus tard dans la journée, alors qu'ils étaient déjà en bonne position dans le classement, qu'ils se sont attaqués à la question du choix de tourelle optimale. Or, leurs essais n'ont pas donné de meilleurs résultats que leur stratégie en cours : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
+Les membres de l'équipe Leebly ont beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où l'on envoie les membres sur la "meilleure" tourelle d'attaque pour attaquer les ennemis. Cette année, ils ont commencé par implémenter une stratégie bien plus rudimentaire, soit d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation, réparé leurs bogues et expérimenter en regardant des parties contre les autres équipes. Ce n'est que plus tard dans la journée, alors qu'ils étaient déjà en bonne position dans le classement, qu'ils se sont attaqués à la question du choix de tourelle optimale. Or, leurs essais n'ont pas donné de meilleurs résultats que leur stratégie plus naïve sans priorisation et ils ont donc laissé tombé cette avenue. Ainsi, lors de la finale, c'est leur stratégie plus simple qui leur a permis de gagner. Les plus petites itérations leur a permis d'en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
 
-Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils avaient optés pour envoyer tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en aussi situation critique, le champ de météores aurait raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur.
+Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoient tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en était en situation critique, le champ de météores aurait raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur, c'est-à-dire, en changeant la valeur, en regardant quelques matches, et en réajustant au besoin. Comme quoi il n'y a pas de trop petites itérations à Blitz.
+
+Même si nos stratégies à SG1 et moi-même différaient en plusieurs points, nous avons aussi procédé par itération plus ou moins importante. Lors des phases de beta-test, je soumettais fréquemment mes changements au server afin de me mesurer à SG1. Ils m'ont appris qu'ils en faisaient de même pour valider leurs stratégies. En réalité, je ne pense pas pouvoir prétendre avoir résolu la clé d'une bonne stratégie spécifique à l'édition de Blitz de cette année : il y avait tant de possibilités, et dans mon cas, j'ai l'impression que c'est plutôt l'attention à certains détails qui a été fructueuse. Or, une chose est sûr pour moi, ce sont les nombreuses confrontations contre les autres équipes de beta-tester qui m'ont aidé à mettre le doigt sur "la prochaine étape", et elles ont été nombreuses. 
 
 ## La stratégie finale
 
-Lorsque j'ai commencé cet article, j'avais pour thème "les stratégies de Coveo Blitz 2024". Je pourrais donc conclure en vous parlant de mon _bot_ et des actions que j'ai choisies de prioriser, soit des scans de radar périodiques, une utilisation du bouclier en cas de dommage critiques, une tourelle dédiée à éliminer les plus gros débris et une offensive constante. Or, je crois qu'il serait un peu caduque de s'en tenir à la stratégie que j'ai employée ainsi - cela vaut bien pour le jeu de cette année, mais qu'en est-il des prochaines éditions ? Je préfère de loin la réponse spontanée qu'a fournie Leebly lorsqu'on leur a demandé, lors de leur victoire, comment ils y sont arrivés : ils ont été itératifs.
+Lorsque j'ai commencé cet article, j'avais pour thème "les stratégies de Coveo Blitz 2024". Je pourrais donc conclure en vous parlant des diverses actions que j'ai choisi de prioriser et d'implémenter, soit des scans de radar périodiques, une utilisation du bouclier en cas de dommage critiques, une tourelle dédiée à éliminer les plus gros débris et une offensive constante. Or, je crois qu'il serait un peu caduque de s'en tenir à la stratégie que j'ai employée ainsi - cela vaut bien pour le jeu de cette année, mais qu'en est-il des prochaines éditions ? Je préfère de loin la réponse spontanée qu'a fournie Leebly lorsqu'on leur a demandé, suite à leur victoire, qu'elle a été leur stratégie. Sans hésiter, ils ont répondu : on a été itératifs.
 
 Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque année, ce serait probablement de suivre ces principes :
 
@@ -95,6 +97,6 @@ Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque
 - Tester les changements, comprendre et analyser les bogues
 - Aller chercher le plus de rétroaction possible, le plus souvent possible afin de décider de la prochaine étape
 
-C'est là la simple description d'une méthode itérative : car oui, ici, ça vaut autant pour Blitz que pour n'importe quelle tâche qu'on rencontre en développement logiciel. Car oui, cela vaut pour tout : devant toute situation, vous êtes doté d'une créativité infinie, mais votre temps est limité, sachez en faire bon usage !
+C'est là la simple description d'une méthode itérative : car oui, ici, ça vaut autant pour Blitz que pour n'importe quelle tâche qu'on rencontre en développement logiciel. Parce que oui, cela vaut pour tout : devant toute situation, vous êtes doté d'une créativité infinie, mais votre temps est limité, sachez en faire bon usage !
 
 _Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. à Andy Emond et Jessie Emond de m'avoir parlé de leurs stratégies. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
