--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -16,7 +16,7 @@ Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux
 
 <!-- more -->
 
-À noter que j'ai moi-même expérimenté le jeu dans un cadre assez différent que celui du jour de la compétition : nous les coachs servons également de "beta-tester" pour l'évènement et devons concevoir un _bot_ en solo en guise de préparation du tournoi. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la compétition, ainsi que SG1, une équipe vétérane qui participé à la phase de "beta test" chaque année.
+À noter que j'ai moi-même expérimenté le jeu dans un cadre assez différent que celui du jour de la compétition : afin de préparer le tournoi, nous sommes invités à jouer le rôle de "beta tester" pour l'évènement et à concevoir un _bot_ en solo histoire de non seulement trouver et réparer le plus de bugs possibles, mais aussi fournir un répertoire bien garni d'adversaires de pratique lors de la compétition. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la compétition, ainsi que SG1, une équipe vétérane qui participé à la phase de "beta test" chaque année.
 
 ## L'inévitable lecture des règles du jeu
 
@@ -44,11 +44,11 @@ La position du vaisseau est fixe dans l'espace. Or, on peut le faire pivoter sur
 
 Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère automatiquement à chaque tour. Cependant, une fois le bouclier épuisé, il cessera de se régénérer, et c'est la vie du vaisseau qui est désormais en jeu. Les _stations du bouclier_ permettent de réparer le bouclier ou d'accélérer sa vitesse de régénération lorsqu'il est en fonction.
 
-À noter que les attaques des autres joueurs ne sont pas les seules menaces : le combat se déroule au milieu d'un champ de météores où sont projetés les débris des autres vaisseaux et du vôtre. Alors que les spectateurs peuvent faire état de tous les projectiles dangereux en un coup d'œil, notre _bot_ lui n'a qu'une perception incomplète son environnement. C'est là qu'entre en jeu le dernier type de stations disponible : les _stations de radar_ permettent de gagner de l'information détaillée sur les adversaires et d'augmenter la distance de détection des débris sur le champ de bataille.
+À noter que les attaques des autres joueurs ne sont pas les seules menaces : le combat se déroule au milieu d'un champ d'astéroïdes où sont projetés les débris des autres vaisseaux et du vôtre. Alors que les spectateurs peuvent faire état de tous les projectiles dangereux en un coup d'œil, notre _bot_ lui n'a qu'une perception incomplète son environnement. C'est là qu'entre en jeu le dernier type de stations disponible : les _stations de radar_ permettent de gagner de l'information détaillée sur les adversaires et d'augmenter la distance de détection des débris sur le champ de bataille.
 
 ## Premières itérations... Et premiers bogues
 
-Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'offense et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit manier le shield, détruire les météores et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
+Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'offense et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit manier le shield, détruire les astéroïdes et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
 
 > Pas besoin de courir plus vite que l'ours pour s'enfuir. Il suffit de courir plus vite que l'autre à côté de toi.
 
@@ -60,13 +60,13 @@ En compétition, Leebly, une équipe de trois personnes, ont pu paralléliser le
 
 Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduit est petit, comme c'était le cas pour notre stratégie d'attaque élémentaire, c'est souvent plus facile à détecter et réparer.
 
-Un autre exemple particulièrement coûteux est apparu pendant que j'ai implémenté la priorisation des tours d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel en mouvement, prisonnier de quelque chose qui s'apparentait à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
+Un autre exemple particulièrement coûteux est apparu pendant que j'ai implémenté la priorisation des tours d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel mouvement, prisonnier de quelque chose qui s'apparentait à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
 
 Peu importe votre stratégie, une implémentation fautive ne la mettra probablement pas en valeur. On ne peut pas complètement éviter les bogues. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, le mode local de Blitz est très pratique justement pour expérimenter et valider nos itérations, sans avoir à se commettre. Il nous permet de lancer des parties de notre poste et les visionner. Et si vous oubliez de vous valider en mode local, il y a toujours les matches contre les autres équipes.
 
 ## Quand "regarder le match" est une vraie question de priorité
 
-L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros météore venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre les pluies incessantes de météores alors que les autres si, ce qui n'était pas le cas en début de journée. J'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores via une tourelle pivotable, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper la venue des météores plus tôt.
+L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros astéroïde venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre la rafale incessante d'astéroïdes alors que les autres si, ce qui n'était pas le cas en début de journée. J'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens débris via une tourelle pivotable, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les astéroïdes dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper leur venue plus tôt.
 
 Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les tourelles pivotables, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement. Comme la plupart des vaisseaux ont moins de quatre tours pivotables accessibles, il arrive de plus en plus fréquemment qu'un des membres de mon équipage se tourne les pouces. Je m'attèle donc à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car la cadence ultra-rapide de projectile agit comme un écran sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. J'avais des vagues idées pour mieux prioriser le type de tours à utiliser en fonction de leur bonus d'attaques par exemple, mais je n'ai jamais eu le temps de m'y pencher sérieusement.
 
@@ -78,7 +78,7 @@ Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien bala
 
 Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
 
-> De trouver le plus de valeur ajouter pour le moins d'effort possible, c'est le secret.
+> De trouver le plus de valeur ajoutée pour le moins d'effort possible, c'est le secret.
 >
 > -- <cite>Nicolas Legros, Équipe Leebly</cite>
 
@@ -86,9 +86,9 @@ Les membres de l'équipe Leebly ont beaucoup renchéri sur la valeur de travaill
 
 PLACEHOLDER: Ajouter GIF de Leebly en final
 
-Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoient tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en était en situation critique, le champ de météores aurait raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur, c'est-à-dire, en changeant la valeur, en regardant quelques matches, et en réajustant au besoin. Bref, il n'y a pas de trop petites ou trop simples itérations à Blitz!
+Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoient tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en était en situation critique, les débris de l'espace auraient raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur, c'est-à-dire, en changeant la valeur, en regardant quelques matches, et en réajustant au besoin. Bref, il n'y a pas de trop petites ou trop simples itérations à Blitz!
 
-Même si les stratégies de SG1 et moi-même différaient en plusieurs points, nous avons, nous aussi, procédé par itération plus ou moins importante. Lors des phases de beta-test, je soumettais fréquemment mes changements au server afin de me mesurer aux autres équipes, dont SG1 en particulier, qui menait le classement constamment. Ils m'ont dit qu'ils en faisaient de même pour valider et développer leurs stratégies. Ce sont dans les deux cas les nombreuses et répétées confrontations entre nous qui nous ont mutuellement aidée à avancer efficacement. En réalité, je ne pense pas pouvoir prétendre avoir résolu la clé d’une grande stratégie pour cette édition de Blitz : j’ai l’impression que c’est plutôt l’attention à de nombreux petits éléments au fil du temps qui a été fructueuse.
+Même si les stratégies de SG1 et moi-même différaient en plusieurs points, nous avons, nous aussi, procédé par itération plus ou moins importante. Lors des phases de beta-test, je soumettais fréquemment mes changements au serveur afin de me mesurer aux autres équipes, dont SG1 en particulier, qui menait le classement constamment. Ils m'ont dit qu'ils en faisaient de même pour valider et développer leurs stratégies. Ce sont dans les deux cas les nombreuses et répétées confrontations entre nous qui nous ont mutuellement aidée à avancer efficacement. En réalité, je ne pense pas pouvoir prétendre avoir résolu la clé d’une grande stratégie pour cette édition de Blitz : j’ai l’impression que c’est plutôt l’attention à de nombreux petits éléments au fil du temps qui a été fructueuse.
 
 ## La stratégie finale
 
@@ -103,4 +103,4 @@ Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque
 
 C'est là la simple description d'une [méthode itérative](https://www.smartsheet.com/iterative-process-guide#:~:text=The%20iterative%20process%20involves%20a,planning%20and%20defining%20overall%20requirements.) : car oui, ici, ça vaut autant pour Blitz que pour n'importe quelle tâche qu'on rencontre en développement logiciel. Parce que oui, cela vaut pour tout : devant toute situation, vous êtes doté d'une créativité infinie, mais votre temps est limité, sachez en faire bon usage !
 
-_Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. à Andy Emond et Jessie Emond de m'avoir parlé de leurs stratégies. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
+_Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. Merci également à Andy Emond et Jesse Emond de m'avoir parlé de leurs stratégies et avoir révisé cet article. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
